# IC_Projects

./: README.md
sndfile-example-bin/: wav_cp  wav_dct  wav_hist
sndfile-example-src/: BitStream.h  README  README.md  dct_encoder  decoder_encoder  decoder_encoder.cpp  gnuPlot.txt  lossy  lossy.cpp  mid_histogram.txt  output.txt  quantized_samples.txt  side_histogram.txt  test_ex5  wav2txt.cpp  wav_cmp.cpp  wav_effects  wav_effects.cpp  wav_hist  wav_hist.cpp  wav_hist.h  wav_quant  wav_quant.cpp  wav_quant.h  wavcmp  wavquant
trab1/: README.md
trab1/sndfile-example-src/: .~lock.README.md#  01_file.txt  dct_decoder  dct_decoder.cpp  dct_encoder.cpp  decoder_encoder.cpp  gnuPlot.txt  histogram.py  test_ex5.cpp  wav_effects  wav_quant.cpp
trab2/: .CMakeLists.txt.swp  BitStream.h  CMakeLists.txt  README.md  audio_codec  audio_codec.cpp  audio_codec.h  audio_decoder.cpp  audio_encoder.cpp  color_channel.cpp  ex2.cpp  ex4.cpp  golomb.h  golombTest.cpp  image_decoder.cpp  image_encoder.cpp
trab2/test/: CMakeCache.txt  Makefile  cmake_install.cmake
trab3/: .comandos.txt.swp  CMakeLists.txt  README.md  golomb.h  image_decoder.cpp  image_encoder.cpp  intra_decoder.cpp  intra_encoder.cpp  trab3Video.osp
